--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -46,5 +46,12 @@
         android:onClick="aIdl"
         android:text="AIDL进程通信"
         tools:ignore="OnClick" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:onClick="weixin"
+        android:text="banner"
+        tools:ignore="OnClick" />
 
 </LinearLayout>
