--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.TestActivity">
+    tools:context=".activity.TestActivity"
+    tools:viewBindingIgnore="true">
 
     <Button
         android:layout_width="match_parent"
@@ -46,6 +47,7 @@
         android:onClick="aIdl"
         android:text="AIDL进程通信"
         tools:ignore="OnClick" />
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -53,5 +55,22 @@
         android:onClick="weixin"
         android:text="banner"
         tools:ignore="OnClick" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:onClick="viewpage"
+        android:text="pageView"
+        tools:ignore="OnClick" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:onClick="viewBind"
+        android:text="viewbinding"
+        tools:ignore="OnClick" />
+
 
 </LinearLayout>
