--- a/app/src/main/res/layout/activity_view_bin_last.xml
+++ b/app/src/main/res/layout/activity_view_bin_last.xml
@@ -3,15 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    tools:viewBindingIgnore="true"
     android:layout_height="match_parent"
-    tools:context=".activity.AIDLActivity">
+    tools:context=".activity.LastViewBinActivity">
 
-    <Button
-        android:id="@+id/aidi_button"
+    <TextView
+        android:id="@+id/text_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="mBtnAidl" />
+        android:text="数据" />
 
 </RelativeLayout>
