--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,10 @@
     <color name="colorAccent">#D81B60</color>
     <color name="white">#ffffff</color>
     <color name="back">#000000</color>
+    <color name="col_f3f3f3">#f3f3f3</color>
+    <color name="col_ff719e">#ff719e</color>
+    <color name="col_ffae9b">#ffae9b</color>
+    <color name="col_55a8ff">#55a8ff</color>
+    <color name="col_8998ff">#8998ff</color>
+    <color name="col_aaabb3">#aaabb3</color>
 </resources>
