--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -72,5 +72,13 @@
         android:text="viewbinding"
         tools:ignore="OnClick" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:onClick="MvPView"
+        android:text="mVPDabinding"
+        tools:ignore="OnClick" />
+
 
 </LinearLayout>
