提交解决应用中的崩溃，防止程序崩溃

--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -84,6 +84,14 @@
             android:onClick="MvPView"
             android:text="mVPDabinding"
             tools:ignore="OnClick" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:onClick="Error"
+            android:text="error"
+            tools:ignore="OnClick" />
     </LinearLayout>
 
 
