封装loading(可以显示在Activity Fragment 和view 上)提交

--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -92,6 +92,14 @@
             android:onClick="Error"
             android:text="error"
             tools:ignore="OnClick" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:onClick="Loading"
+            android:text="Loading"
+            tools:ignore="OnClick" />
     </LinearLayout>
 
 
